--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <body>
   <div class="login-screen active" id="login-screen">
     <div class="card">
-      <h2>🛡️ HACKER TERMINAL</h2>
+      <h2>🛡️LOGIN ACCESS</h2>
       <input type="text" id="username" placeholder="Username" autocomplete="off" />
       <input type="password" id="password" placeholder="Password" autocomplete="off" />
       <button id="btn-login">ACCESS</button>
