--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <div class="login-box">
-    <h2>🛡️ LOGIN ACCESS</h2>
+    <h2>🛡️ ismail ACCESS</h2>
     <input type="text" id="username" placeholder="Username" />
     <input type="password" id="password" placeholder="Password" />
     <button onclick="login()">Login</button>
